--- a/_data/2025/navigation.yml
+++ b/_data/2025/navigation.yml
@@ -2,8 +2,8 @@
   url: "#"
   children:
     - title: Call for Papers
-      name: "2025/cfp"
+      url: "2025/contribute/papers"
 - title: Sponsorship
-  url: "2025/sponsors"
+  url: "2025/sponsorship"
 - title: Committee
-  url: "2025/committee.html"
+  url: "2025/committee"
