--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: IEEE ISMAR
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://www.ieeeismar.net/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.ieeeismar.net" # the base hostname & protocol for your site, e.g. http://example.com
 
 
 # Build settings
