--- a/_data/2025/navigation.yml
+++ b/_data/2025/navigation.yml
@@ -3,6 +3,10 @@
   children:
     - title: Call for Papers
       url: "2025/contribute/papers"
+    - title: Guidelines
+      children:
+        - title: Paper Authors
+          url: "2025/contribute/guidelines/authors"
 - title: Sponsorship
   url: "2025/sponsorship"
 - title: Committee
