--- a/_data/2025/navigation.yml
+++ b/_data/2025/navigation.yml
@@ -3,7 +3,7 @@
   children:
     - title: Call for Papers
       url: "2025/contribute/papers"
-    - title: Call for Posters
+    - title: Call for Poster Papers
       url: "2025/contribute/posters"
     - title: Author Guidelines
       url: "2025/contribute/guidelines/authors"
