--- a/_data/2025/navigation.yml
+++ b/_data/2025/navigation.yml
@@ -5,6 +5,8 @@
       url: "2025/contribute/papers"
     - title: Call for Poster Papers
       url: "2025/contribute/posters"
+    - title: Call for Workshops
+      url: "2025/contribute/workshops"
     - title: Author Guidelines
       url: "2025/contribute/guidelines/authors"
 - title: Sponsorship
