--- a/_data/2025/navigation.yml
+++ b/_data/2025/navigation.yml
@@ -1,5 +1,5 @@
 - title: Contribute
-  url: ""
+  url: "javascript:void(0)"
   children:
     - title: Call for Papers
       url: "2025/contribute/papers"
