post: add Submission Guidelines

--- a/_data/2025/navigation.yml
+++ b/_data/2025/navigation.yml
@@ -9,6 +9,8 @@
       url: "2025/contribute/workshops"
     - title: Author Guidelines
       url: "2025/contribute/guidelines/authors"
+    - title: Submission Guidelines
+      url: "2025/contribute/guidelines/submissions"
 - title: Sponsorship
   url: "2025/sponsorship"
 - title: Committee
