--- a/_data/2025/navigation.yml
+++ b/_data/2025/navigation.yml
@@ -16,6 +16,8 @@
           url: "2025/contribute/guidelines/authors"
         - title: Submission Guidelines
           url: "2025/contribute/guidelines/submissions"
+        - title: Paper Reviewing Guidelines 
+          url: "2025/contribute/guidelines/reviewing"
 - title: Sponsorship
   url: "2025/sponsorship"
 - title: Committee
