post: call for demos

--- a/_data/2025/navigation.yml
+++ b/_data/2025/navigation.yml
@@ -7,6 +7,8 @@
       url: "2025/contribute/posters"
     - title: Call for Workshops
       url: "2025/contribute/workshops"
+    - title: Call for Demos
+      url: "2025/contribute/demos"
     - title: Call for Tutorials
       url: "2025/contribute/tutorials"
     - title: Guidelines
