--- a/_data/2025/navigation.yml
+++ b/_data/2025/navigation.yml
@@ -22,6 +22,8 @@
           url: "2025/contribute/guidelines/submissions"
         - title: Paper Reviewing Guidelines 
           url: "2025/contribute/guidelines/reviewing"
+        - title: Poster Papers Guidelines 
+          url: "2025/contribute/guidelines/poster-paper-guidelines"
 - title: Sponsorship
   url: "2025/sponsorship"
 - title: Committee
