docs: add IPC members list

--- a/_data/2025/navigation.yml
+++ b/_data/2025/navigation.yml
@@ -33,3 +33,5 @@
       url: "2025/committee/organizing"
     - title: Standardization Committee
       url: "2025/committee/standardization"
+    - title: International Program Committee
+      url: "2025/committee/international-program"
