Add call for panels

--- a/_data/2025/navigation.yml
+++ b/_data/2025/navigation.yml
@@ -13,6 +13,8 @@
       url: "2025/contribute/tutorials"
     - title: Doctoral Consortium
       url: "2025/contribute/doctoral-consortium"
+    - title: Panels
+      url: "2025/contribute/panels"
     - title: Guidelines
       url: "javascript:void(0)"
       children:
