--- a/_data/2025/navigation.yml
+++ b/_data/2025/navigation.yml
@@ -17,6 +17,8 @@
       url: "2025/contribute/mental-health"
     - title: Panels
       url: "2025/contribute/panels"
+    - title: Call for Student Volunteers
+      url: "2025/contribute/student-volunteer"
     - title: Guidelines
       url: "javascript:void(0)"
       children:
