--- a/_data/2025/navigation.yml
+++ b/_data/2025/navigation.yml
@@ -46,3 +46,5 @@
       url: "2025/committee/standardization"
     - title: International Program Committee
       url: "2025/committee/international-program"
+    - title: Steering Committee
+      url: "2025/committee/steering-committee"
