Add accepted workshops

--- a/_data/2025/navigation.yml
+++ b/_data/2025/navigation.yml
@@ -5,23 +5,20 @@
       url: "2025/contribute/papers"
     - title: Poster Papers
       url: "2025/contribute/posters"
-    - title: Workshops
-      url: "2025/contribute/workshops"
-    - title: Accepted Workshops
-      url: "javascript:void(0)"
-      children:
-        - title: Mental Health
-          url: "2025/contribute/mental-health"
+    - title: Workshop Papers
+      url: "2025/contribute/workshop-papers"
     - title: Demos
       url: "2025/contribute/demos"
-    - title: Tutorials
-      url: "2025/contribute/tutorials"
     - title: Doctoral Consortium
       url: "2025/contribute/doctoral-consortium"
     - title: Panels
       url: "2025/contribute/panels"
     - title: Call for Student Volunteers
       url: "2025/contribute/student-volunteer"
+    - title: Tutorials
+      url: "2025/contribute/tutorials"
+    - title: Workshop
+      url: "2025/contribute/workshops"
     - title: Guidelines
       url: "javascript:void(0)"
       children:
